--- a/player_info.html
+++ b/player_info.html
@@ -75,110 +75,43 @@
   </div>
 
   <!-- player section -->
-
   <br>
   <section class="food_section layout_padding-bottom">
     <div class="container">
       <div class="heading_container heading_center">
-        <h2>
-          Player Information
-        </h2>
-      </div>
-
-      <ul class="filters_menu">
-        <li class="active" data-filter="*">All</li>
-        <li data-filter=".gScal">GS Caltex</li>
-        <li data-filter=".ibk">IBK</li>
-        <li data-filter=".kgc">KGC</li>
-        <li data-filter=".pepper">PEPPER</li>
-        <li data-filter=".heungkuk">Heungkuk</li>
-        <li data-filter=".kec">Korea Expressway</li>
-        <li data-filter=".hdec">HDEC</li>
-      </ul>
-
-      <div class="filters-content">
-        <div class="row grid">
-          <div class="col-sm-6 col-lg-4 all ibk">
-            <div class="box">
-              <div>
-                <div class="img-box">
-                  <img src="images/player_image/1/1.jpg" alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>Name</h5>
-                  <h5>club name</h5> <h5>captain</h5>
-                  <br>
-                  <div class="options">
-                    <input type="submit" value="more details" class="btn btn-warning">
-                    <br>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-<!--지우기 동적 할당 한 번만 필요-->
-          <div class="col-sm-6 col-lg-4 all pepper">
-            <div class="box">
-              <div>
-                <div class="img-box">
-                  <img src="images/player_image/1/1.jpg" alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>Name</h5>
-                  <h5>club name</h5> <h5>captain</h5>
-                  <br>
-                  <div class="options">
-                    <input type="submit" value="more details" class="btn btn-warning">
-                    <br>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4 all gScal">
-            <div class="box">
-              <div>
-                <div class="img-box">
-                  <img src="images/player_image/1/1.jpg" alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>Name</h5>
-                  <h5>club name</h5> <h5>captain</h5>
-                  <br>
-                  <div class="options">
-                    <input type="submit" value="more details" class="btn btn-warning">
-                    <br>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4 all kec">
-            <div class="box">
-              <div>
-                <div class="img-box">
-                  <img src="images/player_image/1/1.jpg" alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>Name</h5>
-                  <h5>club name</h5> <h5>captain</h5>
-                  <br>
-                  <div class="options">
-                    <input type="submit" value="more details" class="btn btn-warning">
-                    <br>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
+        <div id="target1">
+            <h2>
+            player information
+            </h2>
         </div>
       </div>
+
+      <div class="filters-content">
+          <div class="col-sm-12 col-lg-12">
+            <div class="box">
+              <div>
+                  <div class="img-box">
+                    <img src="images/player_image/1/1.jpg" alt="">
+                  </div>
+                  <div class="detail-box" style="text-align: center">
+                    <h5>Name</h5>
+                    <h5>club name</h5> <h5>captain</h5>
+                    <h5>position</h5>
+                    <h5>number</h5>
+                    <h5>birth</h5>
+                    <h5>dubut</h5>
+                    <h5>nationality</h5>
+                  </div>
+              </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </section>
-<!--여기까지-->
+
+  <!-- end game section -->
+
   <!-- end player section -->
 
   <!-- footer section -->
