--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
 
 </head>
 
+<script>
+
+  jQuery(document).ready(function($) {
+    $(".scroll").click(function(event){            
+      event.preventDefault();
+      $('html,body').animate({scrollTop:$(this.hash).offset().top}, 500);
+    });
+  });
+  
+</script>
+
 <body>
 
   <div class="hero_area">
@@ -89,7 +100,7 @@
                       team1 vs team2
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="#target1" class="btn1">
                         show detail
                       </a>
                     </div>
@@ -110,8 +121,8 @@
                       team1
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
-                        show detail
+                      <a href="club.html" class="btn1">
+                        show more teams
                       </a>
                     </div>
                   </div>
@@ -131,8 +142,8 @@
                       player1
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
-                        show detail
+                      <a href="player.html" class="btn1">
+                        show more players
                       </a>
                     </div>
                   </div>
@@ -154,107 +165,77 @@
     <!-- end slider section -->
   </div>
 
-  <!-- food section -->
+  <!-- game section -->
 
   <br>
   <section class="food_section layout_padding-bottom">
     <div class="container">
       <div class="heading_container heading_center">
+        <div id="target1">
         <h2>
           Game Schedule
         </h2>
       </div>
+      </div>
 
       <ul class="filters_menu">
         <li class="active" data-filter="*">All</li>
-        <li data-filter=".burger">Past</li>
-        <li data-filter=".pizza">Upcoming</li>
+        <li data-filter=".past">Past</li>
+        <li data-filter=".upcoming">Upcoming</li>
       </ul>
 
       <div class="filters-content">
         <div class="row grid">
-          <div class="col-sm-6 col-lg-4 all pizza">
+<!--          {% if(날짜<=현재시간비교한 값 어쩌구..) %}
+            <div class="col-sm-12 col-lg-12 all past">
+          {% else %}
+            <div class="col-sm-12 col-lg-12 all upcoming">
+          {% endif %}
+-->          
+          <div class="col-sm-12 col-lg-12 all past">
             <div class="box">
-              <div>
-                <div class="img-box">
-                  <img src="images/f1.png" alt="">
+              <h5 style="color:#000000">&nbspID: 001</h5>
+              <div class="wrapper">
+                <div class="one"><h3>Team1</h3></div>
+                <div class="two">
+                  <br>
+                  <h5>VS</h5>
+                  <br>
+                  <h4>2021.11.11</h4>
+                  <h4>Stadium</h4>
+                  <h4>Winner</h4>
+                  <br>
                 </div>
-                <div class="detail-box">
-                  <h5>
-                    Delicious Pizza
-                  </h5>
-                  <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
-                  </p>
-                  <div class="options">
-                    <h6>
-                      $20
-                    </h6>
-                    <a href="">
-                      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
-                        <g>
-                          <g>
-                            <path d="M345.6,338.862c-29.184,0-53.248,23.552-53.248,53.248c0,29.184,23.552,53.248,53.248,53.248
-                         c29.184,0,53.248-23.552,53.248-53.248C398.336,362.926,374.784,338.862,345.6,338.862z" />
-                          </g>
-                        </g>
-                        <g>
-                          <g>
-                            <path d="M439.296,84.91c-1.024,0-2.56-0.512-4.096-0.512H112.64l-5.12-34.304C104.448,27.566,84.992,10.67,61.952,10.67H20.48
-                         C9.216,10.67,0,19.886,0,31.15c0,11.264,9.216,20.48,20.48,20.48h41.472c2.56,0,4.608,2.048,5.12,4.608l31.744,216.064
-                         c4.096,27.136,27.648,47.616,55.296,47.616h212.992c26.624,0,49.664-18.944,55.296-45.056l33.28-166.4
-                         C457.728,97.71,450.56,86.958,439.296,84.91z" />
-                          </g>
-                        </g>
-                        <g>
-                          <g>
-                            <path d="M215.04,389.55c-1.024-28.16-24.576-50.688-52.736-50.688c-29.696,1.536-52.224,26.112-51.2,55.296
-                         c1.024,28.16,24.064,50.688,52.224,50.688h1.024C193.536,443.31,216.576,418.734,215.04,389.55z" />
-                          </g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                      </svg>
-                    </a>
-                  </div>
-                </div>
+                <div class="three"><h3>Team2</h3></div>
               </div>
             </div>
           </div>
+
+          <div class="col-sm-12 col-lg-12 all upcoming">
+            <div class="box">
+              <h5 style="color:#000000">&nbspID: 002</h5>
+              <div class="wrapper">
+                <div class="one"><h3>Team1</h3></div>
+                <div class="two">
+                  <br>
+                  <h5>VS</h5>
+                  <br>
+                  <h4>2021.11.13</h4>
+                  <h4>Stadium</h4>
+                  <h4>Winner</h4>
+                  <br>
+                </div>
+                <div class="three"><h3>Team2</h3></div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
   </section>
 
-  <!-- end food section -->
+  <!-- end game section -->
 
   <!-- footer section -->
   <footer class="footer_section">
@@ -264,8 +245,8 @@
             <a href="" class="footer-logo">
               volley volley
             </a>
-            <p>
-              Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with
+            <p style= "color: #ABABAB">
+              Information of Korean women's volleyball
             </p>
             <br>
         </div>
