--- a/login.html
+++ b/login.html
@@ -72,12 +72,12 @@
       <div class="row">
         <div class="col-md-6">
           <div class="form_container">
-            <form action="">
+            <form action="php/login.php" method="POST">
               <div>
-                <input type="text" class="form-control" placeholder="ID" />
+                <input type="text" class="form-control" placeholder="ID" name="uid"/>
               </div>
               <div>
-                <input type="text" class="form-control" placeholder="Password" />
+                <input type="text" class="form-control" placeholder="Password" name="pwd"/>
               </div>
               <div class="btn_box">
                 <button>
